# vkgfx

./: .gitignore  CMakeLists.txt  PATCHES.txt  README.md  compile_shaders.bat  compile_shaders.sh  examples.md
.github/workflows/: ci.yml
assets/: README.md
cmake/: vkgfxConfig.cmake.in
example/: main.cpp
examples/: CMakeLists.txt  main.cpp
examples/01_window/: CMakeLists.txt  main.cpp
examples/02_triangle/: CMakeLists.txt  main.cpp
examples/03_model_loading/: CMakeLists.txt  main.cpp
examples/04_camera/: CMakeLists.txt  main.cpp
examples/05_lighting/: CMakeLists.txt  main.cpp
examples/06_textures/: CMakeLists.txt  main.cpp
examples/07_input/: CMakeLists.txt  main.cpp
examples/08_collision/: CMakeLists.txt  main.cpp
examples/09_scene/: CMakeLists.txt  main.cpp
include/vkgfx/: DeferredRenderer.h  GBuffer.h  SSAOPass.h  camera.h  collision.h  config.h  context.cpp  context.h  frame_graph.h  gpu_culling.h  ibl.h  material.h  mesh.h  postprocess.h  profiler.h  render_graph.h  renderer.h  scene.h  shadow.h  swapchain.h  texture.h  thread_pool.h  types.h  vk_raii.h  vkgfx.h  window.h
shaders/: brdf_lut.comp  equirect_to_cube.comp  fullscreen_quad.vert  gbuffer.frag  gbuffer.vert  geometry.frag  geometry.vert  gpu_cull.comp  irradiance.comp  lighting.frag  lighting.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  point_shadow.frag  point_shadow.vert  postprocess.frag  postprocess.vert  prefilter.comp  shadow.vert  shadow_depth.vert  ssao.frag  ssao_blur.frag  tonemap.frag  tonemap.vert  unlit.frag  unlit.vert
src/: DeferredRenderer.cpp  GBuffer.cpp  SSAOPass.cpp  camera.cpp  collision.cpp  config.cpp  context.cpp  frame_graph.cpp  gpu_culling.cpp  ibl.cpp  material.cpp  mesh.cpp  mesh_gltf.cpp  profiler.cpp  render_graph.cpp  renderer.cpp  renderer_fg.cpp  scene.cpp  shadow.cpp  stb_impl.cpp  swapchain.cpp  texture.cpp  texture_ext.cpp  window.cpp
tests/: CMakeLists.txt  test_headless_smoke.cpp  test_ibl_load.cpp  test_render_pass.cpp  test_vertex_layout.cpp
